# stroke_prediction_classification

./: Data Survei (Clean) rev 1.1.xlsx  README.md  module_decision  pyproject.toml  requirements.txt  requirements_package.txt  saved_model  saved_model.pkl  testing.py  training.py  user_interface.py  userinput.py
src/: training.py  user_interface.py
